// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DataBindingMapEditor > should render existing maps with bindings 1`] = `
<div>
  <div
    data-mocked="SpaceBetween"
  >
    <div
      data-mocked="Box"
    >
      <hr
        class="sc-aXZVg dUMFjc"
      />
      <div
        class="sc-jXbUNg fCsUCC"
      />
      <div
        data-mocked="FormField"
        errortext="null"
        label="Binding Name"
      >
        <div
          data-mocked="Input"
          data-testid="binding-name-input"
          value="binding-1"
        />
      </div>
      <div
        data-mocked="Box"
        margin="{"vertical":"s"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Entity Id"
          >
            <div
              data-mocked="Autosuggest"
              data-testid="select-entityId"
              options="[{"label":"label1","value":"value1"},{"label":"label2","value":"value2"}]"
              value="value1"
            />
          </div>
          <div
            data-mocked="FormField"
          >
            <div>
              <div
                data-mocked="Box"
              >
                Component Name
              </div>
            </div>
            <div
              class="tm-copy-select-flex"
            >
              <div
                class="tm-full-width"
              >
                <div
                  data-mocked="Select"
                  data-testid="value-data-binding-builder-select"
                  options="[{"label":"label1","value":"value1"},{"label":"label2","value":"value2"}]"
                  placeholder="Select an option"
                  selectedoption="null"
                />
              </div>
            </div>
          </div>
          <div
            data-mocked="FormField"
          >
            <div>
              <div
                data-mocked="Box"
              >
                Property Name
              </div>
            </div>
            <div
              class="tm-copy-select-flex"
            >
              <div
                data-mocked="Box"
              />
              <div
                class="tm-full-width"
              >
                <div
                  data-mocked="Select"
                  data-testid="value-data-binding-builder-select"
                  options="[{"label":"label1","value":"value1"},{"label":"label2","value":"value2"}]"
                  placeholder="Select an option"
                  selectedoption="null"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-mocked="Box"
    >
      <hr
        class="sc-aXZVg dUMFjc"
      />
      <div
        class="sc-jXbUNg fCsUCC"
      />
      <div
        data-mocked="FormField"
        errortext="null"
        label="Binding Name"
      >
        <div
          data-mocked="Input"
          data-testid="binding-name-input"
          value="binding-2"
        />
      </div>
      <div
        data-mocked="Box"
        margin="{"vertical":"s"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Entity Id"
          >
            <div
              data-mocked="Autosuggest"
              data-testid="select-entityId"
              options="[{"label":"label1","value":"value1"},{"label":"label2","value":"value2"}]"
              value="value1"
            />
          </div>
          <div
            data-mocked="FormField"
          >
            <div>
              <div
                data-mocked="Box"
              >
                Component Name
              </div>
            </div>
            <div
              class="tm-copy-select-flex"
            >
              <div
                class="tm-full-width"
              >
                <div
                  data-mocked="Select"
                  data-testid="value-data-binding-builder-select"
                  options="[{"label":"label1","value":"value1"},{"label":"label2","value":"value2"}]"
                  placeholder="Select an option"
                  selectedoption="null"
                />
              </div>
            </div>
          </div>
          <div
            data-mocked="FormField"
          >
            <div>
              <div
                data-mocked="Box"
              >
                Property Name
              </div>
            </div>
            <div
              class="tm-copy-select-flex"
            >
              <div
                data-mocked="Box"
              />
              <div
                class="tm-full-width"
              >
                <div
                  data-mocked="Select"
                  data-testid="value-data-binding-builder-select"
                  options="[{"label":"label1","value":"value1"},{"label":"label2","value":"value2"}]"
                  placeholder="Select an option"
                  selectedoption="null"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataBindingMapEditor > should render existing maps with bindings without binding name 1`] = `
<div>
  <div
    data-mocked="SpaceBetween"
  >
    <div
      data-mocked="Box"
    >
      <div
        class="sc-jXbUNg fCsUCC"
      />
      <div
        data-mocked="Box"
        margin="{"vertical":"s"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Entity Id"
          >
            <div
              data-mocked="Autosuggest"
              data-testid="select-entityId"
              options="[{"label":"label1","value":"value1"},{"label":"label2","value":"value2"}]"
              value="value1"
            />
          </div>
          <div
            data-mocked="FormField"
          >
            <div>
              <div
                data-mocked="Box"
              >
                Component Name
              </div>
            </div>
            <div
              class="tm-copy-select-flex"
            >
              <div
                class="tm-full-width"
              >
                <div
                  data-mocked="Select"
                  data-testid="value-data-binding-builder-select"
                  options="[{"label":"label1","value":"value1"},{"label":"label2","value":"value2"}]"
                  placeholder="Select an option"
                  selectedoption="null"
                />
              </div>
            </div>
          </div>
          <div
            data-mocked="FormField"
          >
            <div>
              <div
                data-mocked="Box"
              >
                Property Name
              </div>
            </div>
            <div
              class="tm-copy-select-flex"
            >
              <div
                data-mocked="Box"
              />
              <div
                class="tm-full-width"
              >
                <div
                  data-mocked="Select"
                  data-testid="value-data-binding-builder-select"
                  options="[{"label":"label1","value":"value1"},{"label":"label2","value":"value2"}]"
                  placeholder="Select an option"
                  selectedoption="null"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      data-mocked="Box"
    >
      <hr
        class="sc-aXZVg dUMFjc"
      />
      <div
        class="sc-jXbUNg fCsUCC"
      />
      <div
        data-mocked="Box"
        margin="{"vertical":"s"}"
      >
        <div
          data-mocked="SpaceBetween"
        >
          <div
            data-mocked="FormField"
            label="Entity Id"
          >
            <div
              data-mocked="Autosuggest"
              data-testid="select-entityId"
              options="[{"label":"label1","value":"value1"},{"label":"label2","value":"value2"}]"
              value="value1"
            />
          </div>
          <div
            data-mocked="FormField"
          >
            <div>
              <div
                data-mocked="Box"
              >
                Component Name
              </div>
            </div>
            <div
              class="tm-copy-select-flex"
            >
              <div
                class="tm-full-width"
              >
                <div
                  data-mocked="Select"
                  data-testid="value-data-binding-builder-select"
                  options="[{"label":"label1","value":"value1"},{"label":"label2","value":"value2"}]"
                  placeholder="Select an option"
                  selectedoption="null"
                />
              </div>
            </div>
          </div>
          <div
            data-mocked="FormField"
          >
            <div>
              <div
                data-mocked="Box"
              >
                Property Name
              </div>
            </div>
            <div
              class="tm-copy-select-flex"
            >
              <div
                data-mocked="Box"
              />
              <div
                class="tm-full-width"
              >
                <div
                  data-mocked="Select"
                  data-testid="value-data-binding-builder-select"
                  options="[{"label":"label1","value":"value1"},{"label":"label2","value":"value2"}]"
                  placeholder="Select an option"
                  selectedoption="null"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DataBindingMapEditor > should render with no bindings 1`] = `
<div>
  <div
    data-mocked="SpaceBetween"
  />
</div>
`;
